kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: rag-frontend-service
spec:
    type: ClusterIP
    selector:
        app: rag-frontend
    ports:
        - port: 80
          targetPort: 80
